Fix header width problem and design buttons
The problem with the header width was fixed such that the header element
would occupy the entire width of its parent container.

The buttons were designed for aesthetic purposes with padding, margin,
and border.

At this point, the project is basically complete, but improvements can
be made to the code to make the webpage responsive. Currently, the page
is not responsive at all.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 .header-container {
     max-width: 1035px;
-    border: 2px solid purple;
+    margin: 0 auto;
 }
 
 .nav-bar {
@@ -30,7 +30,6 @@ body {
     display: flex;
     justify-content: flex-end;
     gap: 25px;
-    border: 2px solid green;
 }
 
 .header-logo {
@@ -51,12 +50,10 @@ body {
     align-items: center;
     justify-content: space-between;
     margin: 100px 0;  
-    border: 2px solid blue;
 }
 
 .intro-text {
-    width: 300px;
-    border: 2px solid red;
+    width: 465px;
 }
 
 .main-text {
@@ -75,10 +72,19 @@ button {
     font-size: 18px;
     color:#F9FAF8;
     font-weight: bold;
+    padding: 6px 32px;
+    border-radius: 8px;
+}
+
+.intro-text > button {
+    border: 2px solid #3882F6;
+    margin: 12px 0; 
 }
 
 .intro-container > img {
-    border: 2px solid yellow;
+    width: 520px;
+    height: 250px;
+    background-color: gray;
 }
 
 /* Info Section */
@@ -91,10 +97,6 @@ button {
     flex: 1 1 auto;
     justify-content: center;
     gap: 40px;
-}
-
-.intro-container {
-    width: 870px;
 }
 
 .info-header {
@@ -161,9 +163,10 @@ button {
     display: flex;
     background-color: #3882F6;
     justify-content: center;
-    padding: 50px 220px;
+    padding: 50px 120px;
     border-radius: 8px;
     margin: 100px;
+    gap: 150px;
 }
 
 .action-title {
@@ -175,6 +178,11 @@ button {
 .action-text {
     color: #E5E7EB;
     font-size: 18px;
+}
+
+.action-container > button {
+    border: 2px solid #F9FAF8;
+    height: fit-content;
 }
 
 /* Footer */
